Feat/date filter last events (#39)
* event exact date and date range filters

* documentation

* lint

* removed unused filter package

* Update settings.py

* Update views.py

* Update openapi.json

* Update openapi.json
